--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-<html>
-
-<head>
+<!-- saved from url=(0050)file:///Users/michael/Desktop/MyBioPage/index.html -->
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
     <title> My Bio Page</title>
     <style>
         * {
@@ -21,7 +20,7 @@
         }
 
         a {
-            text-decoration:#ccc;
+            text-decoration: none;
             font-weight: bold;
         }
 
@@ -41,7 +40,7 @@
         }
         .main-header,
         .main-footer {
-            height: 90px;
+            height: 75px;
             width: 100vw;
             background-color: red;
             font-size: 35px;
@@ -79,12 +78,12 @@
         .bottom-section {
             width: 100%;
             height: 70%;
-            background-color:black;
+            background-color: red;
         }
 
         .sidebar {
             width: 25%;
-            background-color: black;
+            background-color: red;
             height: 100%;
             float: left;
             font-size:x-large;
@@ -159,7 +158,7 @@
     <section class="main-container">
         <div class="top-section">
             <div class="pic-container">
-                <img src="Profile.png" class="bio-image" alt="My Picture">
+                <img src="./My Bio Page_files/Profile.png" class="bio-image" alt="My Picture">
             </div>
             <div class="bio-description">
                 <h2> About Me </h2>
@@ -189,40 +188,37 @@
                     <li>
                         <a href="https://www.linkedin.com/in/michael-guadiana-a86b86160/">LinkedIn Profile</a>
                     </li>
+                    <li>
+                        <a href= "./courses.html"> My Courses </a> </a>
+                    </li>
                 </ul>
             </aside>
             <div class="gallery">
                 <h2>Gallery</h2>
                 <ul class="gallery-container">
                     <li class="gallery-item">
-                        <img src="OldPS.png" alt="item1">
+                        <img src="./My Bio Page_files/OldPS.png" alt="item1">
                     </li>
                     <li class="gallery-item">
-                        <img src="Falcons.png" alt="item1">
+                        <img src="./My Bio Page_files/Falcons.png" alt="item1">
                     </li>
                     <li class="gallery-item">
-                        <img src="SF Giants.png" alt="item1">
+                        <img src="./My Bio Page_files/SF Giants.png" alt="item1">
                     </li>
                     <li class="gallery-item">
-                        <img src="Kings.png" alt="item1">
+                        <img src="./My Bio Page_files/Kings.png" alt="item1">
                     </li>
                     <li class="gallery-item">
-                        <img src="Sharks.png" alt="item1">
+                        <img src="./My Bio Page_files/Sharks.png" alt="item1">
                     </li>
                     <li class="gallery-item">
-                        <img src="Bulldogs.png" alt="item1">
+                        <img src="./My Bio Page_files/Bulldogs.png" alt="item1">
                     </li>
                     <li class="gallery-item">
-                        <img src="Whole Foods.png" alt="item1">
+                        <img src="./My Bio Page_files/Whole Foods.png" alt="item1">
                     </li>
                     <li class="gallery-item">
-                        <img src="Apple.png" alt="item1">
-                    </li>
-                    <li class="gallery-item">
-                        <img src="Siths.jpg" alt="item1">
-                    </li>
-                    <li class="gallery-item">
-                        <img src="Wick.png" alt="item1">
+                        <img src="./My Bio Page_files/Apple.png" alt="item1">
                     </li>
 
                 </ul>
@@ -233,6 +229,6 @@
     <footer class="main-footer">
         <span class="footer-text">Copyright (C) 2019. Created by Michael Guadiana</span>
     </footer>
-</body>
 
-</html>
+
+</body></html>
